# WindowsSleepController

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.ja.md  README.md  WINDOWS_SETUP.ja.md  WINDOWS_SETUP.md  api_keys.json  app.py  auth.py  aws_integration.py  install_service.bat  main.py  pyproject.toml  sleep_controller.py  win_service.py
static/css/: custom.css
templates/: aws_lambda_setup.html  aws_lambda_success.html  index.html  login.html  status.html
