[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "os-sys>=0.9.1",
    "psycopg2-binary>=2.9.10",
    "servicemanager>=2.0.10",
    "waitress>=3.0.2",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "boto3>=1.37.18",
    "axios>=0.4.0",
    "botocore>=1.37.18",
]
